--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,6 @@ include "thule-cloud"
 include "thule-config-service"
 include "thule-core"
 include "thule-discovery-service"
-include "thule-edge-service"
+include "thule-edge-server"
 include "thule-people-service"
 include "thule-repository-mongodb"
