--- a/thule-edge-server/src/itest/resources/config/application.yml
+++ b/thule-edge-server/src/itest/resources/config/application.yml
@@ -12,7 +12,7 @@ eureka:
 endpoints:
   sensitive: false
 info:
-  description: Thule Edge Service
+  description: Thule Edge Server
   name: ${spring.application.name}
 
 # Spring logging
