Upgraded spring-data-rest-hal-browser from version 2.6.0.M1 to 2.5.5.RELEASE

--- a/build.gradle
+++ b/build.gradle
@@ -66,9 +66,9 @@ allprojects {
             url "http://pooh:8081/repository/maven-public"
         }
         mavenCentral()
-        maven {
-            url "http://repo.spring.io/milestone"
-        }
+//        maven {
+//            url "http://repo.spring.io/milestone"
+//        }
     }
 
     // Sonarqube plugin configuration
