--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,16 @@
 buildscript {
     // Override Spring boot versions
-    ext["assertj.version"] = "3.5.2"  // Remove when spring boot has caught up with the latest assertj version
-    ext["flyway.version"] = "4.0.3"  // Remove when spring boot has caught up with the latest flyway version
-    ext["hibernate.version"] = "5.2.2.Final"  // Remove when spring boot has caught up with the latest hibernate version
-    ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with the latest hsqldb version
-    ext["jackson.version"] = "2.8.5" // Remove when spring boot has caught up with the latest jackson version
-    ext["mysql.version"] = "6.0.5"  // Remove when spring boot has caught up with the latest mysql version
+    ext["assertj.version"] = "3.5.2"  // Remove when spring boot has caught up with the latest version
+    ext["flyway.version"] = "4.0.3"  // Remove when spring boot has caught up with the latest version
+    ext["hibernate.version"] = "5.2.2.Final"  // Remove when spring boot has caught up with the latest version
+    ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with the latest version
+    ext["jackson.version"] = "2.8.5" // Remove when spring boot has caught up with the latest version
+    ext["mysql.version"] = "6.0.5"  // Remove when spring boot has caught up with the latest version
+    ext["spring-retry.version"] = "1.1.5.RELEASE"  // Remove when spring boot has caught up with the latest version
+
+    ext["spring-cloud-commons.version"] = "1.1.6.RELEASE"  // Remove when spring cloud has caught up with the latest version
+    ext["spring-cloud-config.version"] = "1.2.2.RELEASE"  // Remove when spring cloud has caught up with the latest version
+    ext["spring-cloud-netflix.version"] = "1.2.3.RELEASE"  // Remove when spring cloud has caught up with the latest version
 
     ext {
         jacocoVersion = "0.7.7.201606060606"
