--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     ext["spring-retry.version"] = "1.1.5.RELEASE"  // Remove when spring boot has caught up with the latest version
 
     ext {
-        jacocoVersion = "0.7.7.201606060606"
+        jacocoVersion = "0.7.8"
         springBootVersion = "1.4.2.RELEASE"
         springCloudVersion = "Camden.SR3"
     }
