--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with the latest version
     ext["jackson.version"] = "2.8.6" // Remove when spring boot has caught up with the latest version
     ext["mysql.version"] = "6.0.5"  // Remove when spring boot has caught up with the latest version
+    ext["spring-retry.version"] = "1.2.0.RELEASE"  // Remove when spring boot has caught up with the latest version
 
     ext {
         jacocoVersion = "0.7.8"
