--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     ext["assertj.version"] = "3.5.2"  // Remove when spring boot has caught up with the latest version
     ext["flyway.version"] = "4.0.3"  // Remove when spring boot has caught up with the latest version
     ext["hibernate.version"] = "5.2.6.Final"  // Remove when spring boot has caught up with the latest version
+    ext["httpclient.version"] = "4.5.3"  // Remove when spring boot has caught up with the latest version
     ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with the latest version
     ext["jackson.version"] = "2.8.6" // Remove when spring boot has caught up with the latest version
     ext["mysql.version"] = "6.0.5"  // Remove when spring boot has caught up with the latest version
@@ -108,6 +109,7 @@ subprojects {
             dependency("org.powermock:powermock-api-mockito:1.6.6")
             dependency("org.powermock:powermock-core:1.6.6")
             dependency("org.powermock:powermock-module-junit4:1.6.6")
+            dependency("org.springframework.data:spring-data-rest-hal-browser:2.6.0.RELEASE")
         }
     }
 
