--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     ext["spring-retry.version"] = "1.2.0.RELEASE"  // Remove when spring boot has caught up with the latest version
 
     ext {
-        jacocoVersion = "0.7.8"
+        jacocoVersion = "0.7.9"
         springBootVersion = "1.5.1.RELEASE"
         springCloudVersion = "Camden.SR5"
     }
@@ -106,9 +106,9 @@ subprojects {
             dependency("nl.jqno.equalsverifier:equalsverifier:2.2.1")
             dependency("org.awaitility:awaitility:2.0.0")
             dependency("org.jolokia:jolokia-core:1.3.5")
-            dependency("org.powermock:powermock-api-mockito:1.6.6")
-            dependency("org.powermock:powermock-core:1.6.6")
-            dependency("org.powermock:powermock-module-junit4:1.6.6")
+            dependency("org.powermock:powermock-api-mockito:1.7.0RC2")
+            dependency("org.powermock:powermock-core:1.7.0RC2")
+            dependency("org.powermock:powermock-module-junit4:1.7.0RC2")
             dependency("org.springframework.data:spring-data-rest-hal-browser:2.6.0.RELEASE")
         }
     }
