--- a/build.gradle
+++ b/build.gradle
@@ -232,6 +232,7 @@ project("thule-admin-server") {
         compile("org.springframework.boot:spring-boot-starter-logging")
         compile("org.springframework.cloud:spring-cloud-starter-config")
         compile("org.springframework.cloud:spring-cloud-starter-eureka")
+        compile("org.springframework.cloud:spring-cloud-starter-sleuth")
         compile("org.springframework.retry:spring-retry") // Required to retry connecting to the discovery server when it is not available at startup
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
@@ -253,6 +254,7 @@ project("thule-config-service") {
         compile("org.springframework.cloud:spring-cloud-config-server")
         compile("org.springframework.cloud:spring-cloud-starter")
         compile("org.springframework.cloud:spring-cloud-starter-eureka")
+        compile("org.springframework.cloud:spring-cloud-starter-sleuth")
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
         testCompile("org.awaitility:awaitility")
@@ -290,6 +292,7 @@ project("thule-discovery-service") {
         compile("org.springframework.cloud:spring-cloud-starter-config")
         compile("org.springframework.cloud:spring-cloud-starter-eureka")
         compile("org.springframework.cloud:spring-cloud-starter-eureka-server")
+        compile("org.springframework.cloud:spring-cloud-starter-sleuth")
         compile("org.springframework.retry:spring-retry") // Required to retry connecting to the discovery server when it is not available at startup
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
@@ -310,6 +313,7 @@ project("thule-edge-server") {
         compile("org.springframework.boot:spring-boot-starter-logging")
         compile("org.springframework.cloud:spring-cloud-starter-config")
         compile("org.springframework.cloud:spring-cloud-starter-eureka")
+        compile("org.springframework.cloud:spring-cloud-starter-sleuth")
         compile('org.springframework.cloud:spring-cloud-starter-zuul')
         compile("org.springframework.retry:spring-retry") // Required to retry connecting to the discovery server when it is not available at startup
 
@@ -351,6 +355,7 @@ project("thule-people-service") {
         compile("org.springframework.boot:spring-boot-starter-validation")
         compile("org.springframework.cloud:spring-cloud-starter-config")
         compile("org.springframework.cloud:spring-cloud-starter-eureka")
+        compile("org.springframework.cloud:spring-cloud-starter-sleuth")
         compile("org.springframework.data:spring-data-rest-hal-browser")
         compile("org.springframework.retry:spring-retry") // Required to retry connecting to the discovery server when it is not available at startup
 
