--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     ext["httpclient.version"] = "4.5.3"  // Remove when spring boot has caught up with the latest version
     ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with the latest version
     ext["jackson.version"] = "2.8.7" // Remove when spring boot has caught up with the latest version
+    ext["mockito.version"] = "2.7.11"  // Remove when spring boot has caught up with the latest version
     ext["mysql.version"] = "6.0.5"  // Remove when spring boot has caught up with the latest version
     ext["spring-retry.version"] = "1.2.0.RELEASE"  // Remove when spring boot has caught up with the latest version
 
@@ -104,11 +105,7 @@ subprojects {
             dependency("de.codecentric:spring-boot-admin-server-ui:1.4.6")
             dependency("net.logstash.logback:logstash-logback-encoder:4.8")
             dependency("nl.jqno.equalsverifier:equalsverifier:2.2.1")
-            dependency("org.awaitility:awaitility:2.0.0")
             dependency("org.jolokia:jolokia-core:1.3.5")
-            dependency("org.powermock:powermock-api-mockito:1.7.0RC2")
-            dependency("org.powermock:powermock-core:1.7.0RC2")
-            dependency("org.powermock:powermock-module-junit4:1.7.0RC2")
             dependency("org.springframework.data:spring-data-rest-hal-browser:2.6.0.RELEASE")
         }
     }
@@ -223,10 +220,6 @@ project("thule-cloud") {
         compile("org.springframework.boot:spring-boot-starter-web")
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
-        testCompile("org.awaitility:awaitility")
-        testCompile("org.powermock:powermock-api-mockito")
-        testCompile("org.powermock:powermock-core")
-        testCompile("org.powermock:powermock-module-junit4")
         testCompile("org.springframework.boot:spring-boot-starter-test")
         testCompile("org.springframework.retry:spring-retry")
     }
@@ -248,10 +241,7 @@ project("thule-admin-server") {
         compile("org.springframework.retry:spring-retry") // Required to retry connecting to the discovery server when it is not available at startup
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
-        testCompile("org.awaitility:awaitility")
-        testCompile("org.powermock:powermock-api-mockito")
-        testCompile("org.powermock:powermock-core")
-        testCompile("org.powermock:powermock-module-junit4")
+        testCompile("org.mockito:mockito-core:2.7.11")
         testCompile("org.springframework.boot:spring-boot-starter-test")
     }
 }
@@ -269,10 +259,7 @@ project("thule-config-service") {
         compile("org.springframework.cloud:spring-cloud-starter-sleuth")
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
-        testCompile("org.awaitility:awaitility")
-        testCompile("org.powermock:powermock-api-mockito")
-        testCompile("org.powermock:powermock-core")
-        testCompile("org.powermock:powermock-module-junit4")
+        testCompile("org.mockito:mockito-core:2.7.11")
         testCompile("org.springframework.boot:spring-boot-starter-test")
     }
 }
@@ -285,10 +272,7 @@ project("thule-core") {
         compile("org.springframework.boot:spring-boot-starter-aop")
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
-        testCompile("org.awaitility:awaitility")
-        testCompile("org.powermock:powermock-api-mockito")
-        testCompile("org.powermock:powermock-core")
-        testCompile("org.powermock:powermock-module-junit4")
+        testCompile("org.mockito:mockito-core:2.7.11")
         testCompile("org.springframework.boot:spring-boot-starter-test")
     }
 }
@@ -308,10 +292,6 @@ project("thule-discovery-service") {
         compile("org.springframework.retry:spring-retry") // Required to retry connecting to the discovery server when it is not available at startup
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
-        testCompile("org.awaitility:awaitility")
-        testCompile("org.powermock:powermock-api-mockito")
-        testCompile("org.powermock:powermock-core")
-        testCompile("org.powermock:powermock-module-junit4")
         testCompile("org.springframework.boot:spring-boot-starter-test")
     }
 }
@@ -330,10 +310,6 @@ project("thule-edge-server") {
         compile("org.springframework.retry:spring-retry") // Required to retry connecting to the discovery server when it is not available at startup
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
-        testCompile("org.awaitility:awaitility")
-        testCompile("org.powermock:powermock-api-mockito")
-        testCompile("org.powermock:powermock-core")
-        testCompile("org.powermock:powermock-module-junit4")
         testCompile("org.springframework.boot:spring-boot-starter-test")
     }
 }
@@ -366,11 +342,7 @@ project("thule-people-service") {
         testCompile("com.oracle:ojdbc6")
         testCompile("mysql:mysql-connector-java")
         testCompile("nl.jqno.equalsverifier:equalsverifier")
-        testCompile("org.awaitility:awaitility")
         testCompile("org.hsqldb:hsqldb")
-        testCompile("org.powermock:powermock-api-mockito")
-        testCompile("org.powermock:powermock-core")
-        testCompile("org.powermock:powermock-module-junit4")
         testCompile("org.springframework.boot:spring-boot-starter-test")
     }
 }
@@ -386,10 +358,6 @@ project("thule-repository-mongodb") {
         compile("org.springframework.boot:spring-boot-starter-validation")
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
-        testCompile("org.awaitility:awaitility")
-        testCompile("org.powermock:powermock-api-mockito")
-        testCompile("org.powermock:powermock-core")
-        testCompile("org.powermock:powermock-module-junit4")
         testCompile("org.springframework.boot:spring-boot-starter-test")
     }
 }
