--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     ext["hibernate.version"] = "5.2.8.Final"  // Remove when spring boot has caught up with the latest version
     ext["httpclient.version"] = "4.5.3"  // Remove when spring boot has caught up with the latest version
     ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with the latest version
-    ext["jackson.version"] = "2.9.0.pr1" // Remove when spring boot has caught up with the latest version
+    ext["jackson.version"] = "2.8.7" // Remove when spring boot has caught up with the latest version
     ext["mockito.version"] = "2.7.13"  // Remove when spring boot has caught up with the latest version
     ext["mysql.version"] = "6.0.5"  // Remove when spring boot has caught up with the latest version
     ext["spring-retry.version"] = "1.2.0.RELEASE"  // Remove when spring boot has caught up with the latest version
