--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     // Override Spring boot versions
     ext["assertj.version"] = "3.5.2"  // Remove when spring boot has caught up with the latest version
     ext["flyway.version"] = "4.1.2"  // Remove when spring boot has caught up with the latest version
+    ext["h2.version"] = "1.4.194"  // Remove when spring boot has caught up with the latest h2 version
     ext["hibernate.version"] = "5.2.8.Final"  // Remove when spring boot has caught up with the latest version
     ext["httpclient.version"] = "4.5.3"  // Remove when spring boot has caught up with the latest version
     ext["hsqldb.version"] = "2.3.4"  // Remove when spring boot has caught up with the latest version
