Upgraded spring-data-rest-hal-browser from 2.6.1.RELEASE to 2.6.3.RELEASE and added thule-email-service domain objects

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,5 +6,6 @@ include "thule-config-service"
 include "thule-core"
 include "thule-discovery-service"
 include "thule-edge-server"
+include "thule-email-service"
 include "thule-people-service"
 include "thule-repository-mongodb"
