--- a/build.gradle
+++ b/build.gradle
@@ -107,6 +107,7 @@ subprojects {
             dependency("net.logstash.logback:logstash-logback-encoder:4.9")
             dependency("nl.jqno.equalsverifier:equalsverifier:2.2.2")
             dependency("org.jolokia:jolokia-core:1.3.6")
+            dependency("org.springframework.data:spring-data-rest-hal-browser:2.6.3.RELEASE")
         }
     }
 
@@ -304,6 +305,24 @@ project("thule-edge-server") {
         compile("org.springframework.cloud:spring-cloud-starter-eureka")
         compile("org.springframework.cloud:spring-cloud-starter-sleuth")
         compile('org.springframework.cloud:spring-cloud-starter-zuul')
+        compile("org.springframework.retry:spring-retry") // Required to retry connecting to the discovery server when it is not available at startup
+
+        testCompile("nl.jqno.equalsverifier:equalsverifier")
+        testCompile("org.springframework.boot:spring-boot-starter-test")
+    }
+}
+
+project("thule-email-service") {
+    dependencies {
+        compile project(":thule-core")
+        compile("net.logstash.logback:logstash-logback-encoder")
+        compile("org.jolokia:jolokia-core") // Required for JMX support when using the Admin server
+        compile("org.springframework.boot:spring-boot-starter-actuator")
+        compile("org.springframework.boot:spring-boot-starter-logging")
+        compile("org.springframework.boot:spring-boot-starter-mail")
+        compile("org.springframework.cloud:spring-cloud-starter-config")
+        compile("org.springframework.cloud:spring-cloud-starter-eureka")
+        compile("org.springframework.cloud:spring-cloud-starter-sleuth")
         compile("org.springframework.retry:spring-retry") // Required to retry connecting to the discovery server when it is not available at startup
 
         testCompile("nl.jqno.equalsverifier:equalsverifier")
