Migrated from pooh.serin-consultancy.co.uk/oracle-xe docker image to sath89/oracle-12c

--- a/thule-people-service/src/itest/resources/config/application-oracle.yml
+++ b/thule-people-service/src/itest/resources/config/application-oracle.yml
@@ -2,7 +2,7 @@
 flyway:
   baseline-on-migrate: true
   locations: classpath:flyway/oracle/migration
-  password: system
+  password: oracle
   url: jdbc:oracle:thin:@oracle-host:1521:xe
   user: system
 
