--- a/thule-people-service/src/itest/resources/config/application-mysql.yml
+++ b/thule-people-service/src/itest/resources/config/application-mysql.yml
@@ -2,7 +2,7 @@
 flyway:
   baseline-on-migrate: true
   locations: classpath:flyway/mysql/migration
-  password: system
+  password: mysql
   url: jdbc:mysql://mysql-host:3306/mysql
   user: root
 
