--- a/settings.gradle
+++ b/settings.gradle
@@ -9,3 +9,4 @@ include "thule-edge-server"
 include "thule-email-service"
 include "thule-people-service"
 include "thule-repository-mongodb"
+include "thule-test"
