--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,6 @@ buildscript {
     ext["spring-retry.version"] = "1.2.0.RELEASE"  // Remove when spring boot has caught up with the latest version
 
     ext {
-        jacocoSkip = false
         jacocoVersion = "0.7.9"
         springBootVersion = "1.5.3.RELEASE"
         springCloudVersion = "Dalston.RELEASE"
@@ -41,15 +40,13 @@ buildscript {
     }
 }
 
-// Versions plugin
+//############################## Plugins Configuration ##############################
+// Core gradle plugins
 plugins {
     id "com.github.ben-manes.versions" version "0.14.0"
-}
-
-// Sonarqube plugin
-plugins {
     id "org.sonarqube" version "2.4"
 }
+
 // Sonarqube plugin configuration
 sonarqube {
     properties {
@@ -64,49 +61,22 @@ sonarqube {
 // Sonarqube build breaker plugin
 apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 // Sonarqube build breaker plugin configuration
-sonarqubeBuildBreakerExt {
-    message = "Hi from an extension"
-}
-
-//    tasks.sonarqubeBuildBreaker.dependsOn(tasks.sonarqube)
+tasks.sonarqubeBuildBreaker.dependsOn(tasks.sonarqube)
 project.tasks["sonarqubeBuildBreaker"].dependsOn "sonarqube"
 
 allprojects {
+    //############################## Plugins Configuration ##############################
+    // Java plugin (Note: Several plugins depend on the Java plugin so ensure it remains the first plugin defined)
     apply plugin: "java"
-
-    // Project metadata
-    description = "Thule"
-    group = "uk.co.serin.thule"
-    version = projectVersion + "-" + buildNumber
-
     // Java plugin configuration
     sourceCompatibility =  1.8
     targetCompatibility = 1.8
     // Replace the version in spring config with the gradle build version
     processResources.filter { String line -> line.replace("@version@", version) }
 
-    repositories {
-        mavenLocal()
-        maven {
-            credentials {
-                username = nexusUser
-                password = nexusPassword
-
-            }
-            url "http://pooh:8081/repository/maven-public"
-        }
-        mavenCentral()
-//        maven {
-//            url "http://repo.spring.io/milestone"
-//        }
-    }
-}
-
-subprojects {
     // Dependency Management plugin
     apply plugin: "io.spring.dependency-management"
-
-    // Dependencies
+    // Dependencies Management plugin configuration
     dependencyManagement {
         imports {
             mavenBom("org.springframework.cloud:spring-cloud-starter-parent:${springCloudVersion}")
@@ -154,7 +124,6 @@ subprojects {
     apply plugin: "jacoco"
     // Jacoco plugin configuration
     jacoco.toolVersion = jacocoVersion
-    test.jacoco.enabled = !jacocoSkip
     jacocoTestCoverageVerification {
         violationRules {
             rule {
@@ -169,13 +138,35 @@ subprojects {
 
     // Maven plugin
     apply plugin: "maven"
+    // Maven plugin configuration
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                repository(url: "http://pooh:8081/repository/maven-releases") {
+                    authentication(userName: nexusUser, password: nexusPassword)
+                }
+                snapshotRepository(url: "http://pooh:8081/repository/maven-snapshots") {
+                    authentication(userName: nexusUser, password: nexusPassword)
+                }
+            }
+        }
+    }
 
-    // Spring Boot plugin
-    // org.springframework.boot must be after dependencyManagement see https://spring.io/blog/2015/11/25/migrating-spring-cloud-apps-from-spring-boot-1-2-to-1-3
-    apply plugin: "org.springframework.boot"
-    // Spring boot create META-INF/build-info.properties to automatically add to the spring actutator info
-    springBoot {
-        buildInfo()
+    //############################## Build Configuration ##############################
+    repositories {
+        mavenLocal()
+        maven {
+            credentials {
+                username = nexusUser
+                password = nexusPassword
+
+            }
+            url "http://pooh:8081/repository/maven-public"
+        }
+        mavenCentral()
+//        maven {
+//            url "http://repo.spring.io/milestone"
+//        }
     }
 
     // Integration tests configuration
@@ -229,12 +220,20 @@ subprojects {
             }
         }
     }
+
+    // Project metadata
+    description = "Thule"
+    group = "uk.co.serin.thule"
+    version = projectVersion + "-" + buildNumber
+
 }
 
+subprojects {
+}
+
+//############################## Project Configuration ##############################
 project("thule-cloud") {
     tasks.itest.dependsOn(":thule-admin-server:build", ":thule-config-service:build", ":thule-discovery-service:build", ":thule-edge-server:build", ":thule-people-service:build")
-
-    bootRepackage.enabled = false
 
     dependencies {
         compile("org.apache.httpcomponents:httpclient")
@@ -250,6 +249,14 @@ project("thule-cloud") {
 }
 
 project("thule-admin-server") {
+    // Spring Boot plugin
+    // org.springframework.boot must be after dependencyManagement see https://spring.io/blog/2015/11/25/migrating-spring-cloud-apps-from-spring-boot-1-2-to-1-3
+    apply plugin: "org.springframework.boot"
+    // Spring boot create META-INF/build-info.properties to automatically add to the spring actutator info
+    springBoot {
+        buildInfo()
+    }
+
     dependencies {
         compile project(":thule-core")
         compile("de.codecentric:spring-boot-admin-server")
@@ -271,6 +278,14 @@ project("thule-admin-server") {
 }
 
 project("thule-config-service") {
+    // Spring Boot plugin
+    // org.springframework.boot must be after dependencyManagement see https://spring.io/blog/2015/11/25/migrating-spring-cloud-apps-from-spring-boot-1-2-to-1-3
+    apply plugin: "org.springframework.boot"
+    // Spring boot create META-INF/build-info.properties to automatically add to the spring actutator info
+    springBoot {
+        buildInfo()
+    }
+
     dependencies {
         compile project(":thule-core")
         compile("net.logstash.logback:logstash-logback-encoder")
@@ -289,8 +304,6 @@ project("thule-config-service") {
 }
 
 project("thule-core") {
-    bootRepackage.enabled = false
-
     dependencies {
         compile("commons-lang:commons-lang")
         compile("org.springframework.boot:spring-boot-starter-aop")
@@ -302,6 +315,14 @@ project("thule-core") {
 }
 
 project("thule-discovery-service") {
+    // Spring Boot plugin
+    // org.springframework.boot must be after dependencyManagement see https://spring.io/blog/2015/11/25/migrating-spring-cloud-apps-from-spring-boot-1-2-to-1-3
+    apply plugin: "org.springframework.boot"
+    // Spring boot create META-INF/build-info.properties to automatically add to the spring actutator info
+    springBoot {
+        buildInfo()
+    }
+
     dependencies {
         compile project(":thule-core")
         compile("net.logstash.logback:logstash-logback-encoder")
@@ -322,6 +343,14 @@ project("thule-discovery-service") {
 }
 
 project("thule-edge-server") {
+    // Spring Boot plugin
+    // org.springframework.boot must be after dependencyManagement see https://spring.io/blog/2015/11/25/migrating-spring-cloud-apps-from-spring-boot-1-2-to-1-3
+    apply plugin: "org.springframework.boot"
+    // Spring boot create META-INF/build-info.properties to automatically add to the spring actutator info
+    springBoot {
+        buildInfo()
+    }
+
     dependencies {
         compile project(":thule-core")
         compile("net.logstash.logback:logstash-logback-encoder")
@@ -341,6 +370,14 @@ project("thule-edge-server") {
 }
 
 project("thule-email-service") {
+    // Spring Boot plugin
+    // org.springframework.boot must be after dependencyManagement see https://spring.io/blog/2015/11/25/migrating-spring-cloud-apps-from-spring-boot-1-2-to-1-3
+    apply plugin: "org.springframework.boot"
+    // Spring boot create META-INF/build-info.properties to automatically add to the spring actutator info
+    springBoot {
+        buildInfo()
+    }
+
     dependencies {
         compile project(":thule-core")
         compile("net.logstash.logback:logstash-logback-encoder")
@@ -360,6 +397,14 @@ project("thule-email-service") {
 }
 
 project("thule-people-service") {
+    // Spring Boot plugin
+    // org.springframework.boot must be after dependencyManagement see https://spring.io/blog/2015/11/25/migrating-spring-cloud-apps-from-spring-boot-1-2-to-1-3
+    apply plugin: "org.springframework.boot"
+    // Spring boot create META-INF/build-info.properties to automatically add to the spring actutator info
+    springBoot {
+        buildInfo()
+    }
+
     dependencies {
         compile project(":thule-core")
         compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310") // Spring boot will add java8 java.util.time Jackson support when this dependency has been added
@@ -394,8 +439,6 @@ project("thule-people-service") {
 }
 
 project("thule-repository-mongodb") {
-    bootRepackage.enabled = false
-
     dependencies {
         compile project(":thule-core")
         compile("net.logstash.logback:logstash-logback-encoder")
@@ -410,8 +453,6 @@ project("thule-repository-mongodb") {
 }
 
 project("thule-test") {
-    bootRepackage.enabled = false
-
     dependencies {
         testCompile("nl.jqno.equalsverifier:equalsverifier")
         testCompile("org.springframework.boot:spring-boot-starter-test")
