--- a/build.gradle
+++ b/build.gradle
@@ -53,21 +53,20 @@ plugins {
 }
 
 // Sonarqube plugin configuration
-    sonarqube {
-        properties {
-            // SonarQube will fail due to duplicate code across micro-services, however, this is legal. So we will exclude cpd for those classes
-            property "sonar.cpd.exclusions", "**/domain/**"
-            property "sonar.host.url", "http://pooh:9000"
-            property "sonar.scm.disabled", "true"
-            property "sonar.projectName", "Thule"
-        }
+sonarqube {
+    properties {
+        // SonarQube will fail due to duplicate code across micro-services, however, this is legal. So we will exclude cpd for those classes
+        property "sonar.cpd.exclusions", "**/domain/**"
+        property "sonar.host.url", "http://pooh:9000"
+        property "sonar.scm.disabled", "true"
+        property "sonar.projectName", "Thule"
     }
+}
 
 // Sonarqube build breaker plugin
-    apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
+apply plugin: "uk.co.serin.gradle.plugins.sonarqube-build-breaker"
 // Sonarqube build breaker plugin configuration
-    tasks.sonarqubeBuildBreaker.dependsOn(tasks.sonarqube)
-    project.tasks["sonarqubeBuildBreaker"].dependsOn "sonarqube"
+tasks.sonarqubeBuildBreaker.dependsOn(tasks.sonarqube)
 
 allprojects {
     //############################## Plugins Configuration ##############################
@@ -141,22 +140,25 @@ allprojects {
     jacocoTestCoverageVerification.dependsOn jacocoTestReport // Always create a report even if jacocoTestCoverageVerification fails
     check.dependsOn jacocoTestCoverageVerification
 
-    // Maven plugin
-    apply plugin: "maven"
+    // Maven Publish plugin
+    apply plugin: 'maven-publish'
     // Maven plugin configuration
-    uploadArchives {
+    publishing {
+        publications {
+            mavenJava(MavenPublication) {
+                from components.java
+            }
+        }
         repositories {
-            mavenDeployer {
-                repository(url: "http://pooh:8081/repository/maven-releases") {
-                    authentication(userName: nexusUser, password: nexusPassword)
-                }
-                snapshotRepository(url: "http://pooh:8081/repository/maven-snapshots") {
-                    authentication(userName: nexusUser, password: nexusPassword)
+            maven {
+                url("http://pooh:8081/repository/maven-${project.version.endsWith('-SNAPSHOT') ? 'snapshots' : 'releases'}")
+                credentials {
+                    username = nexusUser
+                    password = nexusPassword
                 }
             }
         }
     }
-    // tasks.uploadArchives.dependsOn(tasks.sonarqubeBuildBreaker)
 
     //############################## Build Configuration ##############################
     repositories {
