--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,6 @@ buildscript {
     }
 
     repositories {
-        mavenLocal()
         maven {
             credentials {
                 username = nexusUser
@@ -32,7 +31,7 @@ buildscript {
             }
             url "http://pooh:8081/repository/maven-public"
         }
-        mavenCentral()
+//        mavenCentral()
 //        maven {
 //            url "http://repo.spring.io/milestone"
 //        }
@@ -162,7 +161,6 @@ allprojects {
 
     //############################## Build Configuration ##############################
     repositories {
-        mavenLocal()
         maven {
             credentials {
                 username = nexusUser
@@ -171,7 +169,7 @@ allprojects {
             }
             url "http://pooh:8081/repository/maven-public"
         }
-        mavenCentral()
+//        mavenCentral()
 //        maven {
 //            url "http://repo.spring.io/milestone"
 //        }
