--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,7 @@ allprojects {
             dependency("de.codecentric:spring-boot-admin-server-ui:1.5.0")
             dependency("net.logstash.logback:logstash-logback-encoder:4.9")
             dependency("nl.jqno.equalsverifier:equalsverifier:2.2.2")
+            dependency("org.codehaus.janino:janino:3.0.7")
             dependency("org.jolokia:jolokia-core:1.3.6")
             dependency("org.springframework.data:spring-data-rest-hal-browser:2.6.3.RELEASE")
         }
@@ -312,6 +313,7 @@ project("thule-config-service") {
 project("thule-core") {
     dependencies {
         compile("commons-lang:commons-lang")
+        compile("org.codehaus.janino:janino")
         compile("org.springframework.boot:spring-boot-starter-aop")
         compile("org.springframework.boot:spring-boot-starter-logging")
         compile("org.springframework.boot:spring-boot-starter-web")
