--- a/thule-config-service/src/main/resources/config/default/thule-people-service.yml
+++ b/thule-config-service/src/main/resources/config/default/thule-people-service.yml
@@ -61,5 +61,6 @@ spring:
 # Thule configuration
 thule:
   logging:
-    file: ${HOME}/log/thule/people-service/people-service.log
-    trace-file: ${HOME}/log/thule/people-service/people-service-trace.log
+    logstash:
+      host: logstash-host
+      port: 5400
