Factored out many spring boot config parameters regarding flyway and the database

--- a/thule-config-service/src/main/resources/config/thule-people-service/application.yml
+++ b/thule-config-service/src/main/resources/config/thule-people-service/application.yml
@@ -44,17 +44,12 @@ spring:
   datasource:
     driver-class-name: net.sf.log4jdbc.DriverSpy
     url: jdbc:log4jdbc:h2:mem:testdb
-  h2:
-    console:
-      enabled: true
-      settings:
-        web-allow-others: true
   jackson:
     serialization:
       write_dates_as_timestamps: false
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
 
 # Thule configuration
 thule:
